--- a/auth_service/requirements.txt
+++ b/auth_service/requirements.txt
@@ -16,6 +16,7 @@ psycopg2-binary==2.9.10
 pyasn1==0.4.8
 pydantic==2.11.5
 pydantic-settings==2.9.1
+pydantic[email]
 pydantic_core==2.33.2
 python-dotenv==1.1.0
 python-jose==3.4.0
