--- a/user_service/requirements.txt
+++ b/user_service/requirements.txt
@@ -3,12 +3,15 @@ annotated-types==0.7.0
 anyio==4.9.0
 asgi-correlation-id==4.3.4
 asyncpg==0.30.0
+certifi==2025.4.26
 click==8.2.1
 dnspython==2.7.0
 ecdsa==0.19.1
 email_validator==2.2.0
 fastapi==0.115.12
 h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.10
 Mako==1.3.10
 MarkupSafe==3.0.2
