--- a/auth_service/Dockerfile
+++ b/auth_service/Dockerfile
@@ -4,5 +4,7 @@ LABEL authors="logosph"
 WORKDIR /app
 COPY . .
 
+ENV PYTHONPATH=/app
+
 RUN apt-get update
 RUN pip install --no-cache-dir -r requirements.txt
