--- a/auth_service/Dockerfile
+++ b/auth_service/Dockerfile
@@ -2,9 +2,9 @@ FROM python:3.10
 LABEL authors="logosph"
 
 WORKDIR /app
-COPY . /app
+COPY . .
 
 ENV PYTHONPATH=/app
 
-RUN apt-get update
-RUN pip install --no-cache-dir -r requirements.txt
+RUN apt-get update && \
+    pip install --no-cache-dir -r requirements.txt
