--- a/user_service/Dockerfile
+++ b/user_service/Dockerfile
@@ -1,10 +1,21 @@
 FROM python:3.10
 LABEL authors="logosph"
 
+#WORKDIR /app
+#COPY . .
+#
+#ENV PYTHONPATH=/app
+#
+#RUN apt-get update && \
+#    pip install --no-cache-dir -r requirements.txt
+
+ENV PYTHONPATH /app
+
+RUN mkdir /app
 WORKDIR /app
-COPY . .
 
-ENV PYTHONPATH=/app
+RUN apt-get update
 
-RUN apt-get update && \
-    pip install --no-cache-dir -r requirements.txt
+COPY requirements.txt requirements.txt
+RUN pip3 install -r requirements.txt
+
