--- a/auth_service/requirements.txt
+++ b/auth_service/requirements.txt
@@ -5,6 +5,7 @@ asgi-correlation-id==4.3.4
 asyncpg==0.30.0
 click==8.2.1
 ecdsa==0.19.1
+email_validator==2.2.0
 fastapi==0.115.12
 h11==0.16.0
 httpx==0.28.1
