--- a/readings_service/requirements.txt
+++ b/readings_service/requirements.txt
@@ -31,4 +31,5 @@ SQLAlchemy==2.0.41
 starlette==0.46.2
 typing-inspection==0.4.1
 typing_extensions==4.13.2
-uvicorn==0.34.2
+uvicorn==0.27.1
+APScheduler==3.10.4
